syntax = "proto3";

option csharp_namespace = "AcceptsCoin.Services.StorageServer.Protos";
package file;
import "google/protobuf/empty.proto";


service UploadFileAppService{
    rpc FileUpLoad (stream BytesContent) returns(google.protobuf.Empty);
}
message FileInfod{
    string fileName = 1;
    string fileExtension = 2;
}
message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfod info = 4;
}

